# research-agent

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  SECURITY.md  create-paper  docker-compose.yml  sync-papers  write-paper
docs/: ARCHITECTURE.md  CODEX.md  DEVELOPER-GUIDE.md  KNOWLEDGE-GRAPH.md  PIPELINE-REFERENCE.md  README.md  SCRIPTS-REFERENCE.md  TROUBLESHOOTING.md  VENUE-REFERENCE.md  pipeline-diagram.html
gui/: dev-backend.ts  open-paper  package-lock.json  package.json  svelte.config.js  vite.config.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs  watcher.rs
gui/src-tauri/src/commands/: fs.rs  latex.rs  mod.rs  pipeline.rs  state.rs  terminal.rs
plans/: 00-pipeline-split-refactor.md  01-citation-snowballing.md  02-evidence-density-scoring.md  03-enhanced-source-acquisition.md  04-knowledge-graph-deep-integration.md  05-argumentation-framework.md  06-iterative-research-writing-loop.md  07-co-citation-analysis.md  08-qa-iteration-memory.md  09-methodological-assumptions.md  10-smaller-improvements.md
template/: gitignore  main.tex  references.bib
tests/: conftest.py  run_all.sh  test_commands.py  test_enrichment.py  test_format_sentences.py  test_knowledge.py  test_knowledge_queue.py  test_pipeline.py  test_prompts.sh  test_quality.py  test_reviewer_kb.py  test_runtime_support.py  test_schema.py  test_smart_query.py  test_state_completeness.py  test_structure.sh  test_venues.py  test_verify_references.py
(+226 files in other folders)
