[package]
name = "research-agent-gui"
version = "0.1.0"
description = "Research Agent - Paper Writing IDE"
authors = ["Nicolas Corder <ndcorder@pm.me>"]
license = "MIT"
edition = "2021"

[lib]
name = "research_agent_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
portable-pty = "0.8"
log = "0.4"
dirs = "6"
tauri-plugin-dialog = "2"
